--- a/static/sass/Profile/Profile.sass
+++ b/static/sass/Profile/Profile.sass
@@ -16,7 +16,7 @@
 		width: 100%
 		display: flex
 		flex-direction: column
-		min-height: $height
+		//min-height: $height
 
 	.profile-picture
 		height: 10rem
@@ -29,7 +29,7 @@
 		height: $height
 
 	.profile-info--wrapper.no-songs
-		height: 12rem
+		height: 16rem
 
 	.profile-info--wrapper
 		.edit-profile-icon--wrapper
@@ -208,8 +208,8 @@
 			display: none
 
 		.no-songs--wrapper
-			display: flex
-			flex: 1
+			//display: flex
+			//flex: 1
 			// max-width: 13rem
 			flex-direction: column
 			justify-content: center
